.features-wrapper now scales correctly on mobiles.

--- a/ClearBnB-project/www/src/style/ResidenceDetails.css
+++ b/ClearBnB-project/www/src/style/ResidenceDetails.css
@@ -115,7 +115,7 @@
 .residenceDetail > .inner > .infoWrapper > .features > .features-wrapper {
   margin-top: 20px;
   width: 100%;
-  max-height: 50vh;
+  max-height: 500vh;
   padding: 20px;
   background: #eee;
   border-radius: 10px;
